# helloc

./: .gitmodules  CMakeLists.txt  build.sh  comparison.txt  run_catch2.sh  run_doctest.sh  run_googletest.sh
catch2/: run_app.sh
catch2/src/: CMakeLists.txt
catch2/test/: CMakeLists.txt  test_facul.cpp  test_filter.cpp  test_filter.h  test_myapp.cpp
doctest/: CMakeLists.txt
doctest/src/: filter.h  main.c
doctest/test/: CMakeLists.txt  test_filter.cpp  test_filter.h  test_myapp.cpp
googletest/: run_tests.sh
googletest/src/: CMakeLists.txt  facul.h  filter.h  main.c  myapp.c
googletest/test/: CMakeLists.txt  helloc_testsuite.cpp  test_facul.cpp  test_filter.h  test_myapp.cpp
src/: CMakeLists.txt  facul.c  filter.c  myapp.c  myapp.h
test/: CMakeLists.txt
test/catch2/: CMakeLists.txt  test_facul.cpp  test_filter.cpp  test_myapp.cpp
test/doctest/: CMakeLists.txt  param.h  test_facul.cpp  test_filter.h
test/googletest/: CMakeLists.txt  test_facul.cpp  test_filter.cpp
